fix(statement): eliminar white-space nowrap que desbordaba el setup largo

--- a/components/projects/StatementBlock.module.css
+++ b/components/projects/StatementBlock.module.css
@@ -43,11 +43,6 @@
   line-height: 1.2;
 }
 
-@media (min-width: 1024px) {
-  .setup {
-    white-space: nowrap;
-  }
-}
 
 .statement {
   font-family: var(--font-heading);
